<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_ff9800"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/edt_search"
            android:layout_width="0.0dp"
            android:layout_height="31dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:background="@drawable/style_home_pager_toolbar_search_view"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:textAlignment="center"
            android:lines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/color_ffdebd"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:scrollbars="none"
        android:layout_below="@id/search">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v4.view.ViewPager
                android:id="@+id/vp"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:background="@color/background"/>

            <com.example.madking.View.MyGridView
                android:id="@+id/typeview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:gravity="center">

            </com.example.madking.View.MyGridView>

            //开始时不显示
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/line"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/recently"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/ActivityColor"
                    android:text="@string/price"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/line"></View>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/ActivityColor"
                    android:text="@string/hot"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/line"></View>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/ActivityColor"
                    android:text="@string/evaluation"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"></View>

            <com.example.madking.View.MyListView
                android:id="@+id/merchantview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

            </com.example.madking.View.MyListView>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/register"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/line"></View>
        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>