<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MerchantActivity">

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/ActivityColor"
            android:text="@string/price"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/ActivityColor"
            android:text="@string/hot"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/ActivityColor"
            android:text="@string/evaluation"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"></View>

    <ListView
        android:id="@+id/merchants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>